@@ -16,8 +16,6 @@ The rules for this file:
 ??/??/?? richardjgowers, IAlibay, hmacdope, orbeckst, cbouy, lilyminium,
          daveminh, jbarnoud, yuxuanzhuang
 
-
-
   * 2.0.0
 
 Fixes
@@ -28,6 +26,9 @@ Fixes
   * Testsuite does not any more matplotlib.use('agg') (#2191)
   * In ChainReader, read_frame does not trigger change of iterating position. 
     (Issue #2723, PR #2815)
+  * TRZReader now checks `n_atoms` on reading. (Issue #2817, PR #2820)
+  * TRZWriter now writes `n_atoms` to the file. (Issue #2817, PR #2820)
+
 
 Enhancements
   * Added the RDKitParser which creates a `core.topology.Topology` object from
